gccida/c2/express_from_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7477:4: error: expected ';' after expression
rtx v10; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7477:5: error: use of undeclared identifier 'v10'
rtx v10; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7483:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7516:11: error: expected ';' after expression
b = ( rtx)b[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7530:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = (  struct rtx_def *)v3[1]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7533:27: error: expected expression
if ( rtx_equal_p( *( rtx *)&v3[1], b) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7545:12: error: expected ';' after expression
v3 = ( rtx)v3[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7549:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtx = (  struct rtx_def *)v4[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7551:1: error: use of undeclared identifier 'v10'
v10 = b; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7552:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = (  struct rtx_def *)b[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7555:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)b[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7576:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)v10 + 2), v12, v14); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/loop.c:7576:68: error: use of undeclared identifier 'v10'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)v10 + 2), v12, v14); 
                                                                   ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/express_from_1/src/obj/loop.o] Error 1
